<resources>
    <string name="app_name" translatable="false">Guessaday</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="dstartdate" translatable="false">1900-01-01</string>
    <string name="denddate" translatable="false">2050-12-31</string>
    <string name="about">About</string>
    <string name="title_activity_about">About Guessaday</string>
    <string name="str_app_description">This app displays a random date. You are then supposed to calculate what day of the week this day is and select the correct one.</string>
    <string name="str_author">"Author"</string>
    <string name="str_howto">If you don\'t yet know how to calculate the day of the week, you can certainly learn it:</string>
    <string name="str_moreinfo">More Information</string>
    <string name="str_url" translatable="false">https://page.mi.fu-berlin.de/moritz/guessaday</string>
    <string name="str_ok">OK</string>
    <string name="str_version">Version</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Timer</string>
    <string name="pref_description_social_recommendationsOn">Enabled</string>
    <string name="pref_description_social_recommendationsOff">Disabled</string>
    <string name="pref_visiOn">Enabled</string>
    <string name="pref_visiOff">Disabled</string>
    <string name="reappear_msg">Tap on hidden date to make it reappear!</string>
    <string name="after">After %s</string>
    <!--<string name="visi_toast">Tap on hidden date to make it reappear!</string>-->


    <!--<string name="pref_title_display_name">Display name</string>-->
    <!--<string name="pref_default_display_name">John Smith</string>-->

    <!--<string name="pref_title_add_friends_to_messages">Add friends to messages</string>-->
    <!--<string-array name="pref_example_list_titles">-->
    <!--<item>Always</item>-->
    <!--<item>When possible</item>-->
    <!--<item>Never</item>-->
    <!--</string-array>-->


    <!--<string-array name="pref_example_list_values">-->
    <!--<item>1</item>-->
    <!--<item>0</item>-->
    <!--<item>-1</item>-->
    <!--</string-array>-->

    <!-- Example settings for Data & Sync -->
    <!--  <string name="pref_header_data_sync">Data &amp; sync</string>-->

    <string name="pref_title_sync_frequency">Date range</string>
    <string-array name="pref_sync_frequency_titles">
        <item>Pick your own</item>
        <item>This month</item>
        <item>This year</item>
        <item>Next year</item>
        <item>The last 100 years</item>
        <item>The 20th century</item>
        <item>The 21th century</item>
        <item>1582-10-15 – today</item>
        <item>1600-01-01 – 2099-12-31</item>
        <item>0001-01-01 – 9999-12-31</item>


    </string-array>
    <string-array name="pref_sync_frequency_values" translatable="false">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
    </string-array>


    <string name="pref_firstweekday">First day in list</string>
    <string-array name="pref_firstweekday_titles" translatable="false">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>
    <string-array name="pref_firstweekday_values" translatable="false">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>
    <string name="pref_title_visi_switch">Short date display</string>

    <string name="pref_title_visi">Hide the date</string>
    <string-array name="pref_visi_titles" translatable="false">
        <item>0.1s</item>
        <item>0.25s</item>
        <item>0.5s</item>
        <item>0.75s</item>
        <item>1s</item>
        <item>1.25s</item>
        <item>1.5s</item>
        <item>1.75s</item>
        <item>2s</item>
        <item>2.5s</item>
        <item>5s</item>
        <item>10s</item>
        <item>25s</item>
        <item>60s</item>


    </string-array>
    <string-array name="pref_visi_values" translatable="false">
        <item>0.1</item>
        <item>0.25</item>
        <item>0.5</item>
        <item>0.75</item>
        <item>1</item>
        <item>1.25</item>
        <item>1.5</item>
        <item>1.75</item>
        <item>2</item>
        <item>2.5</item>
        <item>5</item>
        <item>10</item>
        <item>25</item>
        <item>60</item>
    </string-array>


</resources>
