<PreferenceScreen android:icon="@null" xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <SwitchPreference
        android:defaultValue="true"
        android:key="example_switch"
        android:icon="@drawable/ic_timer"
        android:title="@string/pref_title_social_recommendations"
        android:summaryOn="@string/pref_description_social_recommendationsOn"
        android:summaryOff="@string/pref_description_social_recommendationsOff"
        android:switchTextOff=""
        android:switchTextOn=""
        android:showText="false"/>
        <!--/>-->


    <!--android:summary="@string/pref_description_social_recommendations"-->

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
   <com.goltzkiste.guessaday.ListPreferenceCompat
        android:icon="@drawable/ic_event_note"
        android:defaultValue="0"
        android:summary="%s"
        android:entries="@array/pref_sync_frequency_titles"
        android:entryValues="@array/pref_sync_frequency_values"
        android:key="sync_frequency"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_sync_frequency"
        app:dependentValue="0"/>
    <com.goltzkiste.guessaday.DatePreference
        android:key="startdate"
        android:title="Start date"
        android:dialogTitle="Pick start date"
        android:dependency="sync_frequency"
        android:icon="@android:color/transparent"
        android:defaultValue="@string/dstartdate"
        android:summary="%s"
        />
    <com.goltzkiste.guessaday.DatePreference
        android:key="enddate"
        android:title="End date"
        android:dialogTitle="Pick end date"
        android:dependency="sync_frequency"
        android:icon="@android:color/transparent"
        android:defaultValue="@string/denddate"
        android:summary="%s"
        />
    <com.goltzkiste.guessaday.ListPreferenceCompat
        android:key="firstweekday"
        android:icon="@drawable/ic_format_list_numbered"
        android:defaultValue="0"
        android:summary="%s"
        android:entries="@array/pref_firstweekday_titles"
        android:entryValues="@array/pref_sync_frequency_values"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_firstweekday"
        />
    <SwitchPreference
        android:icon="@drawable/ic_visibility_off"
        android:defaultValue="false"
        android:key="pref_visi_switch"
        android:title="@string/pref_title_visi_switch"
        android:summaryOn="@string/pref_visiOn"
        android:summaryOff="@string/pref_visiOff"
        android:switchTextOff=""
        android:switchTextOn=""
        android:showText="false"/>
    <com.goltzkiste.guessaday.ListPreferenceCompat
        android:key="visi_pref"
        android:defaultValue="1"
        android:summary="After %s"
        android:entries="@array/pref_visi_titles"
        android:entryValues="@array/pref_visi_values"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_visi"
        android:dependency="pref_visi_switch"
        android:icon="@android:color/transparent"
        />
  <!--  <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_display_name"
        android:inputType="textCapWords"
        android:key="example_text"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_display_name" />-->

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code.-->f
  <!--  <ListPreference
        android:defaultValue="-1"
        android:entries="@array/pref_example_list_titles"
        android:entryValues="@array/pref_example_list_values"
        android:key="example_list"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_add_friends_to_messages" />-->
</PreferenceScreen>
